crates/wgso/tests/cases_invalid/directive_pre_validation/.expected
error: same name `duplicated1` used for two compute shaders
 --> ./tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl:1:15
  |
1 | #mod<compute> duplicated1
  |               ^^^^^^^^^^^ first definition
  |
 ::: ./tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl:2:15
  |
2 | #mod<compute> duplicated1
  |               ^^^^^^^^^^^ second definition
  |
error: same name `duplicated2` used for two render shaders
 --> ./tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl:3:27
  |
3 | #mod<render, Vertex, f32> duplicated2
  |                           ^^^^^^^^^^^ first definition
  |
 ::: ./tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl:4:27
  |
4 | #mod<render, Vertex, f32> duplicated2
  |                           ^^^^^^^^^^^ second definition
  |
error: file at './tests/cases_invalid/directive_pre_validation/invalid/module.wgsl' does not exist
 --> ./tests/cases_invalid/directive_pre_validation/import.wgsl:1:2
  |
1 | #import invalid.module
  |  ^^^^^^^^^^^^^^^^^^^^^
  |
error: shader not found
 --> ./tests/cases_invalid/directive_pre_validation/unknown_shader_name.wgsl:1:7
  |
1 | #init ~.unknown_shader_name.duplicated2()
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: shader not found
 --> ./tests/cases_invalid/directive_pre_validation/unknown_shader_name.wgsl:2:6
  |
2 | #run ~.unknown_shader_name.duplicated2()
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: shader not found
 --> ./tests/cases_invalid/directive_pre_validation/unknown_shader_name.wgsl:3:7
  |
3 | #draw ~.unknown_shader_name.duplicated1<vertex_buffer, instance_buffer>()
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |